--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="container " style="position: relative;">
             <div class="flex justifybetween aligncenter py-24">
                 <div class="logo">
                     <img src="assets/images/logo.png" alt="">
@@ -124,7 +124,7 @@
                     <div class="flex justifybetween mb-30 aligncenter">
                         <div class="flex  aligncenter gap32">
                             <img src="assets/images/bitlogo.png" width="30" height="36" alt="">
-                            <h4 class="semibold font24 my-0">Web Developer Intern at BitBlazeTec</h4>
+                            <h4 class="semibold font24 my-0">Web development Intern at BitBlazeTec</h4>
                         </div>
                         <p class="light my-0 font20 semibold">June 2025 - Sept 2025</p>
                     </div>
@@ -280,8 +280,8 @@
                 <form action="" class="col6">
                     <input type="text" placeholder="Your Name">
                     <input type="email" placeholder="your Email">
-                    <input type="text" class="msg" placeholder="How can I halp?">
-                    <div class="flex justifycenter aligncenter gap32">
+                    <input type="text" class="msg" placeholder="How can I help?">
+                    <div class="flex aligncenter gap32">
                         <button class="btn">Get In Touch</button>
                         <a href=""><i class="fa-brands fa-linkedin-in sociallinks"></i></a>
                         <a href=""><i class="fa-brands fa-github sociallinks"></i></a>
@@ -332,8 +332,8 @@
             autoplayTimeout: 5000,
             responsive: {
                 0: {
-                    items: 1,
-                    margin: 30,
+                    items: 2,
+                    margin: 20,
                 },
                 400: {
                     items: 2,
