--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <div class="container " style="position: relative;">
+        <div class="container" style="position: relative;">
             <div class="flex justifybetween aligncenter py-24">
                 <div class="logo">
                     <img src="assets/images/logo.png" alt="">
@@ -36,8 +36,8 @@
                                 <li><a href="">Skills</a></li>
                                 <li><a href="">Projects</a></li>
                                 <li><a href="">Contact Me</a></li>
-                                <a href="" class="btn">Resume<i style="font-size: 22px;"
-                                        class="fa-solid fa-cloud-arrow-down"></i></a>
+                                <a href="" class="btn ml-100">Resume<i
+                                        class="font22 fa-solid fa-cloud-arrow-down"></i></a>
                             </ul>
                         </nav>
                     </div>
@@ -47,11 +47,13 @@
     </header>
 
 
+
+
     <section class="py-80">
         <div class="container">
             <div class="flex aligncenter justifybetween">
-                <div>
-                    <h1 class="font48 mt-0 lh-150 regular">Hello I’am <span class="extrabold">Hassan Naqvi.
+                <div class="order2">
+                    <h1 class="font48 mt-10 lh-150 regular">Hello I’am <span class="extrabold">Hassan Naqvi.
                             Frontend</span>
                         <span class="stroke font48 extrabold">Developer</span> <br>
                         based in <span class="extrabold">Pakistan.</span>
@@ -61,7 +63,7 @@
                         of Graduation. I am fond of implementing full stack web and mobile applications. You can follow
                         me on these platforms to stay connected.</p>
                 </div>
-                <img src="assets/images/img.png" class="w-100" alt="">
+                <img src="assets/images/img.png" class="w-100 bounce order1" alt="">
             </div>
             <div class="linkline">
                 <div class="flex flex1 gap32">
@@ -189,7 +191,8 @@
             <h1 class="regular textcenter font48 mb-80 my-0">My <span class="extrabold">Projects</span></h1>
             <div class="flex justifycenter gap80 mb-120 aligncenter">
                 <div class="col6 outline">
-                    <a href=""><img src="assets/images/enterprise.png" width="100%" alt=""></a>
+                    <a href="https://enterprise-strategies.vercel.app/"><img src="assets/images/enterprise.png"
+                            width="100%" alt=""></a>
                 </div>
                 <div class="col6">
                     <h2 class="extrabold my-0 mb-30 font48">01</h2>
@@ -199,7 +202,8 @@
                         It
                         is a Figma converted design.</p>
                     <p class="font20">Check this out on vercel</p>
-                    <a href="" class="check"><i class="fa-solid font20 fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://enterprise-strategies.vercel.app/" class="check"><i
+                            class="fa-solid font20 fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="flex justifycenter gap80 mb-120 aligncenter">
@@ -317,9 +321,6 @@
             </div>
         </div>
     </footer>
-
-
-
 
 
     <script>
