--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     <div class="dropdown-content">
                         <nav>
                             <ul>
-                                <li><a href="">About Me</a></li>
-                                <li><a href="">Skills</a></li>
-                                <li><a href="">Projects</a></li>
-                                <li><a href="">Contact Me</a></li>
+                                <li><a href="#about">About Me</a></li>
+                                <li><a href="#skills">Skills</a></li>
+                                <li><a href="#projects">Projects</a></li>
+                                <li><a href="#contact">Contact Me</a></li>
                                 <a href="" class="btn ml-100">Resume<i
                                         class="font22 fa-solid fa-cloud-arrow-down"></i></a>
                             </ul>
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="flex aligncenter justifybetween">
                 <div class="order2">
-                    <h1 class="font48 mt-10 lh-150 regular">Hello I’am <span class="extrabold">Hassan Naqvi.
+                    <h1 class="font48 mt-20 lh-150 regular">Hello I’am <span class="extrabold">Hassan Naqvi.
                             Frontend</span>
                         <span class="stroke font48 extrabold">Developer</span> <br>
                         based in <span class="extrabold">Pakistan.</span>
@@ -79,7 +79,7 @@
 
 
 
-    <section class="mb-80">
+    <section id="skills" class="mb-80">
         <div class="container">
             <h1 class="regular textcenter font48 mb-80 my-0">My <span class="extrabold">Skills</span></h1>
             <div class="owl-carousel owl-theme">
@@ -155,7 +155,7 @@
 
 
 
-    <section class="py-80">
+    <section id="about" class="py-80">
         <div class="container">
             <div class="flex justifybetween aligncenter gap80">
                 <img src="assets/images/img2.png" class="w-100" alt="">
@@ -186,7 +186,7 @@
 
 
 
-    <section class="bg-black">
+    <section id="projects" class="bg-black">
         <div class="container">
             <h1 class="regular textcenter font48 mb-80 my-0">My <span class="extrabold">Projects</span></h1>
             <div class="flex justifycenter gap80 mb-120 aligncenter">
@@ -278,7 +278,7 @@
 
 
 
-    <section class="py-80">
+    <section id="contact" class="py-80">
         <div class="container">
             <div class="flex justifybetween aligncenter gap80">
                 <form action="" class="col6">
