--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
                 <div class="col6">
                     <h2 class="extrabold my-0 mb-30 font48">01</h2>
                     <h3 class="font32  my-0 bold">Enterprise Strategies</h3>
-                    <p class="dark font16">A fully responsive on all screens, single page Website implemented in Html,
+                    <p class="dark font16 mb-30">A fully responsive on all screens, single page Website implemented in
+                        Html,
                         Css and javascript.
                         It
                         is a Figma converted design.</p>
-                    <p class="font20">Check this out on vercel</p>
-                    <a href="https://enterprise-strategies.vercel.app/" class="check"><i
-                            class="fa-solid font20 fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://enterprise-strategies.vercel.app/" class="btn2">Live Demo<i
+                            class="fa-solid  fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="flex justifycenter gap80 mb-120 aligncenter">
@@ -214,26 +214,28 @@
                 <div class="col6">
                     <h2 class="extrabold my-0 mb-30 font48">02</h2>
                     <h3 class="font32 my-0 bold">Bruh Got Games</h3>
-                    <p class="dark font16">A fully responsive on all screens, multi page Website implemented in Html,
+                    <p class="dark font16 mb-30">A fully responsive on all screens, multi page Website implemented in
+                        Html,
                         Css and Javascript. It
                         is a Figma converted design.</p>
-                    <p class="font20">Check this out on vercel</p>
-                    <a href="https://bruh-got-games.vercel.app/" class="check"><i
-                            class="fa-solid font20 fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://bruh-got-games.vercel.app/" class="btn2">Live Demo<i
+                            class="fa-solid  fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="flex justifycenter gap80 aligncenter">
                 <div class="col6 outline">
-                    <a href=""><img src="assets/images/octoberchic.png" width="100%" alt=""></a>
+                    <a href="https://octoberchic-art.vercel.app/"><img src="assets/images/octoberchic.png" width="100%"
+                            alt=""></a>
                 </div>
                 <div class="col6">
-                    <h2 class="extrabold my-0 mb-30  font48">03</h2>
+                    <h2 class="extrabold my-0 mb-30 font48">03</h2>
                     <h3 class="font32 my-0 bold">Octoberchic Art</h3>
-                    <p class="dark font16">A fully responsive on all screens, multi page Website implemented in Html,
+                    <p class="dark font16 mb-30">A fully responsive on all screens, multi page Website implemented in
+                        Html,
                         Css and Javascript. It
                         is a Figma converted design.</p>
-                    <p class="font20">Check this out on vercel</p>
-                    <a href="" class="check"><i class="fa-solid font20 fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://octoberchic-art.vercel.app/" class="btn2">Live Demo<i
+                            class="fa-solid  fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
