--- a/index.html
+++ b/index.html
@@ -190,12 +190,27 @@
         <div class="container">
             <h1 class="regular textcenter font48 mb-80 my-0">My <span class="extrabold">Projects</span></h1>
             <div class="flex justifycenter gap80 mb-120 aligncenter">
+                <div class="col6 outline" style="order: 2;">
+                    <a href="https://roshan-studio.vercel.app/"><img src="assets/images/roshan.png" width="100%"
+                            alt=""></a>
+                </div>
+                <div class="col6">
+                    <h2 class="extrabold my-0 mb-30 font48">01</h2>
+                    <h3 class="font32 my-0 bold">Roshan Studio</h3>
+                    <p class="dark font16 mb-30">A fully responsive on all screens, single page Website implemented in
+                        Html,
+                        Css and Javascript. </p>
+                    <a href="https://roshan-studio.vercel.app/" class="btn2">Live Demo<i
+                            class="fa-solid  fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="flex justifycenter gap80 mb-120 aligncenter">
                 <div class="col6 outline">
                     <a href="https://enterprise-strategies.vercel.app/"><img src="assets/images/enterprise.png"
                             width="100%" alt=""></a>
                 </div>
                 <div class="col6">
-                    <h2 class="extrabold my-0 mb-30 font48">01</h2>
+                    <h2 class="extrabold my-0 mb-30 font48">02</h2>
                     <h3 class="font32  my-0 bold">Enterprise Strategies</h3>
                     <p class="dark font16 mb-30">A fully responsive on all screens, single page Website implemented in
                         Html,
@@ -212,7 +227,7 @@
                             alt=""></a>
                 </div>
                 <div class="col6">
-                    <h2 class="extrabold my-0 mb-30 font48">02</h2>
+                    <h2 class="extrabold my-0 mb-30 font48">03</h2>
                     <h3 class="font32 my-0 bold">Bruh Got Games</h3>
                     <p class="dark font16 mb-30">A fully responsive on all screens, multi page Website implemented in
                         Html,
@@ -228,7 +243,7 @@
                             alt=""></a>
                 </div>
                 <div class="col6">
-                    <h2 class="extrabold my-0 mb-30 font48">03</h2>
+                    <h2 class="extrabold my-0 mb-30 font48">04</h2>
                     <h3 class="font32 my-0 bold">Octoberchic Art</h3>
                     <p class="dark font16 mb-30">A fully responsive on all screens, multi page Website implemented in
                         Html,
