--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="flex justifybetween aligncenter py-24">
                 <div class="logo">
                     <img src="assets/images/logo.png" alt="">
-                    <h5 class="my-0 font24 bold">Personal</h5>
+                    <h5 class="my-0 font24 bold">NAQVI</h5>
                 </div>
                 <div class="dropdown">
                     <input type="checkbox" name="" hidden id="toggle">
@@ -48,7 +48,6 @@
 
 
 
-
     <section class="py-80">
         <div class="container">
             <div class="flex aligncenter justifybetween">
@@ -67,9 +66,12 @@
             </div>
             <div class="linkline">
                 <div class="flex flex1 gap32">
-                    <a href=""><i class="fa-brands fa-linkedin-in sociallinks"></i></a>
-                    <a href=""><i class="fa-brands fa-github sociallinks"></i></a>
-                    <a href=""><i class="fa-brands fa-facebook sociallinks"></i></a>
+                    <a
+                        href="https://www.linkedin.com/in/hassan-naqvi-b26b20301?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BZc2jNm0xTECTB3RUXgxEGA%3D%3D"><i
+                            class="fa-brands fa-linkedin-in sociallinks"></i></a>
+                    <a href="https://github.com/Hassan-Naqwi"><i class="fa-brands fa-github sociallinks"></i></a>
+                    <a href="https://www.facebook.com/hassan.naqvi.453088"><i
+                            class="fa-brands fa-facebook sociallinks"></i></a>
                     <a href=""><i class="fa-brands fa-twitter sociallinks"></i></a>
                 </div>
                 <div class="line"></div>
@@ -186,6 +188,9 @@
 
 
 
+    <!-- https://visuals-mauve.vercel.app/ -->
+
+
     <section id="projects" class="bg-black">
         <div class="container">
             <h1 class="regular textcenter font48 mb-80 my-0">My <span class="extrabold">Projects</span></h1>
@@ -298,15 +303,18 @@
     <section id="contact" class="py-80">
         <div class="container">
             <div class="flex justifybetween aligncenter gap80">
-                <form action="" class="col6">
-                    <input type="text" placeholder="Your Name">
-                    <input type="email" placeholder="your Email">
-                    <input type="text" class="msg" placeholder="How can I help?">
+                <form action="" id="form" method="post" class="col6">
+                    <input type="text" name="name" placeholder="Your Name">
+                    <input type="email" name="email" placeholder="Your Email">
+                    <textarea type="text" name="message" class="msg" placeholder="How can I help?"></textarea>
                     <div class="flex aligncenter gap32">
-                        <button class="btn">Get In Touch</button>
-                        <a href=""><i class="fa-brands fa-linkedin-in sociallinks"></i></a>
-                        <a href=""><i class="fa-brands fa-github sociallinks"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook sociallinks"></i></a>
+                        <input class="btn" type="submit" value="Get In Touch">
+                        <a
+                            href="https://www.linkedin.com/in/hassan-naqvi-b26b20301?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BZc2jNm0xTECTB3RUXgxEGA%3D%3D"><i
+                                class="fa-brands fa-linkedin-in sociallinks"></i></a>
+                        <a href="https://github.com/Hassan-Naqwi"><i class="fa-brands fa-github sociallinks"></i></a>
+                        <a href="https://www.facebook.com/hassan.naqvi.453088"><i
+                                class="fa-brands fa-facebook sociallinks"></i></a>
                         <a href=""><i class="fa-brands fa-twitter sociallinks"></i></a>
                     </div>
                 </form>
@@ -324,15 +332,17 @@
 
 
 
+
+
     <footer>
         <div class="container">
             <div class="flex justifybetween aligncenter py-24">
                 <div class="logo">
                     <img src="assets/images/logo2.svg" alt="">
-                    <h5 class="my-0 font20 bold">Personal</h5>
+                    <h5 class="my-0 font20 bold">NAQVI</h5>
                 </div>
                 <div>
-                    <p class="font16 my-0 mb-8">@2025 Personal</p>
+                    <p class="font16 my-0 mb-8">@2025 NAQVI</p>
                     <p class="font16 my-0">Made in HTML, CSS, JS</p>
                 </div>
             </div>
@@ -373,6 +383,7 @@
             }
         })
     </script>
+
 
 
 </body>
